# Quanser-Arm

./: .gitignore  README.md  blank_sim.py  output.txt  pyproject.toml  run_hoop_sorting.py  test_output.txt  test_sim.py
api/: __init__.py  factory.py  mirrored_qarm.py
common/: qarm_base.py
demos/: README.md  __init__.py  _shared.py  blank_sim.py  gamepad_multi_hoops.py  hoop_positions.json  hoop_positions_backup.json  hoop_segments.py  hoop_sorter.py  keyboard_control.py  keyboard_multi_hoops.py  label_demo.py  multi_hoops_segments.py  pick_and_place.py  qarm_controller.py  qarm_hoop_sorter.py  run_sorter_in_sim.py  scene_objects.py  student_main.py
demos/models/: head.stl  hoop.stl
docs/: URDF.md
examples/: pick_and_place_demo.py
hardware/: real_qarm.py
qarm_gripper/urdf/: qarm_gripper.urdf
sim/: __init__.py  actual_sim.py  assets.py  bootstrap.py  env.py  panda_viewer.py  qt_viewer.py  run_gui.py  sim_qarm.py
sim/icons/: icon.icns
sim/qarm/: readme.md
sim/qarm/meshes/: Gripper.stl
sim/qarm/urdf/: QARM.urdf
student_template/: README.md  __init__.py  student_gamepad_object.py  student_main.py  student_object.py
student_template/models/: hoop-collision-inset.stl  hoop-collision.stl  hoop-segment.stl
