[project]
name = "qarm-hackathon"
version = "0.1.0"
description = "Hackathon starter framework for controlling the Quanser QArm in simulation and on hardware."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pybullet",
    "numpy",
    "panda3d",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "common",
    "common.*",
    "sim",
    "sim.*",
    "hardware",
    "hardware.*",
    "api",
    "api.*",
    "student_template",
    "student_template.*",
    "examples",
    "examples.*",
]
exclude = [
    "qarm",
    "qarm.*",
    "qarm_gripper",
    "qarm_gripper.*",
]
