[project]
name = "qarm-hackathon"
version = "0.1.0"
description = "Hackathon starter framework for controlling the Quanser QArm in simulation and on hardware."
readme = "README.md"
requires-python = ">3,<3.13"
dependencies = [
    "pybullet",
    "numpy",
    "panda3d",
    "pygame",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "common",
    "common.*",
    "sim",
    "sim.*",
    "hardware",
    "hardware.*",
    "api",
    "api.*",
    "demos",
    "demos.*",
    "examples",
    "examples.*",
]
exclude = [
    "qarm",
    "qarm.*",
    "qarm_gripper",
    "qarm_gripper.*",
]
